// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createConnectText > should return text and tooltip: 'connected' 1`] = `"$(vm-connect) DHC: localhost:10000"`;

exports[`createConnectText > should return text and tooltip: 'connecting' 1`] = `"$(sync~spin) Deephaven: Connecting..."`;

exports[`createConnectText > should return text and tooltip: 'disconnected' 1`] = `"$(plug) Deephaven: Disconnected"`;

exports[`createConnectionOption > should return connection option: 'DHC', { label: 'groovy', url: URL { href: 'http://localhost:10001/', origin: 'http://localhost:10001', protocol: 'http:', username: '', password: '', host: 'localhost:10001', hostname: 'localhost', port: '10001', pathname: '/', search: '', searchParams: [Object], hash: '' } } 1`] = `
{
  "label": "DHC: localhost:10001",
  "type": "DHC",
  "url": "http://localhost:10001/",
}
`;

exports[`createConnectionOption > should return connection option: 'DHC', { label: 'python', url: URL { href: 'http://localhost:10000/', origin: 'http://localhost:10000', protocol: 'http:', username: '', password: '', host: 'localhost:10000', hostname: 'localhost', port: '10000', pathname: '/', search: '', searchParams: [Object], hash: '' } } 1`] = `
{
  "label": "DHC: localhost:10000",
  "type": "DHC",
  "url": "http://localhost:10000/",
}
`;

exports[`createConnectionQuickPickOptions > should return quick pick options: editorActiveConnectionUrl=Active A 1`] = `
[
  {
    "kind": -1,
    "label": "Active Connections",
  },
  {
    "data": {
      "isConnected": true,
      "serverUrl": "http://localhost:10000/",
    },
    "description": "python (current)",
    "iconPath": ThemeIcon {
      "color": undefined,
      "id": "vm-connect",
    },
    "label": "http://localhost:10000/",
    "type": "connection",
  },
  {
    "data": {
      "isConnected": true,
      "serverUrl": "http://localhost:10002/",
    },
    "description": "python",
    "iconPath": ThemeIcon {
      "color": undefined,
      "id": "vm-connect",
    },
    "label": "http://localhost:10002/",
    "type": "connection",
  },
  {
    "kind": -1,
    "label": "Connect to Server",
  },
  {
    "data": {
      "connectionCount": 0,
      "isConnected": false,
      "isRunning": false,
      "type": "DHC",
      "url": "http://localhost:10001/",
    },
    "description": undefined,
    "iconPath": ThemeIcon {
      "color": undefined,
      "id": "server",
    },
    "label": "http://localhost:10001/",
    "type": "server",
  },
  {
    "data": {
      "connectionCount": 0,
      "isConnected": false,
      "isRunning": false,
      "type": "DHC",
      "url": "http://localhost:10003/",
    },
    "description": undefined,
    "iconPath": ThemeIcon {
      "color": undefined,
      "id": "server",
    },
    "label": "http://localhost:10003/",
    "type": "server",
  },
]
`;

exports[`createConnectionQuickPickOptions > should return quick pick options: editorActiveConnectionUrl=No active 1`] = `
[
  {
    "kind": -1,
    "label": "Active Connections",
  },
  {
    "data": {
      "isConnected": true,
      "serverUrl": "http://localhost:10000/",
    },
    "description": "python",
    "iconPath": ThemeIcon {
      "color": undefined,
      "id": "vm-connect",
    },
    "label": "http://localhost:10000/",
    "type": "connection",
  },
  {
    "data": {
      "isConnected": true,
      "serverUrl": "http://localhost:10002/",
    },
    "description": "python",
    "iconPath": ThemeIcon {
      "color": undefined,
      "id": "vm-connect",
    },
    "label": "http://localhost:10002/",
    "type": "connection",
  },
  {
    "kind": -1,
    "label": "Connect to Server",
  },
  {
    "data": {
      "connectionCount": 0,
      "isConnected": false,
      "isRunning": false,
      "type": "DHC",
      "url": "http://localhost:10001/",
    },
    "description": undefined,
    "iconPath": ThemeIcon {
      "color": undefined,
      "id": "server",
    },
    "label": "http://localhost:10001/",
    "type": "server",
  },
  {
    "data": {
      "connectionCount": 0,
      "isConnected": false,
      "isRunning": false,
      "type": "DHC",
      "url": "http://localhost:10003/",
    },
    "description": undefined,
    "iconPath": ThemeIcon {
      "color": undefined,
      "id": "server",
    },
    "label": "http://localhost:10003/",
    "type": "server",
  },
]
`;
